--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "tiberius",
-  "version": "1.0.0",
-  "description": "The second Hugo Theme for nicholasnooney.com",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nicholasnooney-com/tiberius.git"
-  },
-  "keywords": [
-    "hugo"
-  ],
   "author": "Nicholas Nooney",
-  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/nicholasnooney-com/tiberius/issues"
   },
-  "homepage": "https://github.com/nicholasnooney-com/tiberius#readme",
+  "comments": {
+    "dependencies": {},
+    "devDependencies": {
+      "@tailwindcss/typography": "project",
+      "autoprefixer": "project",
+      "postcss": "project",
+      "postcss-cli": "project",
+      "tailwindcss": "project"
+    }
+  },
+  "dependencies": {},
+  "description": "The second Hugo Theme for nicholasnooney.com",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.0.8"
-  }
+  },
+  "homepage": "https://github.com/nicholasnooney-com/tiberius#readme",
+  "keywords": [
+    "hugo"
+  ],
+  "license": "Apache-2.0",
+  "name": "tiberius",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicholasnooney-com/tiberius.git"
+  },
+  "version": "1.0.0"
 }
