--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "autoprefixer": "project",
       "postcss": "project",
       "postcss-cli": "project",
+      "postcss-import": "project",
       "tailwindcss": "project"
     }
   },
@@ -17,10 +18,11 @@
   "description": "The second Hugo Theme for nicholasnooney.com",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.1",
+    "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
-    "tailwindcss": "^3.0.8"
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^3.0.12"
   },
   "homepage": "https://github.com/nicholasnooney-com/tiberius#readme",
   "keywords": [
