--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "comments": {
     "dependencies": {},
     "devDependencies": {
+      "@tailwindcss/forms": "project",
       "@tailwindcss/typography": "project",
+      "@types/lunr": "project",
       "autoprefixer": "project",
       "postcss": "project",
       "postcss-cli": "project",
@@ -17,7 +19,9 @@
   "dependencies": {},
   "description": "The second Hugo Theme for nicholasnooney.com",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@types/lunr": "^2.3.4",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
